MOBI-140 updated popup positioning for android data and time spinner to avoid shift in layout on first click of popup controls.
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@27614 1de00972-ac04-4911-a46b-06793c8d78d9

--- a/components/component/src/org/icefaces/mobi/component/timespinner/android/default-time.css
+++ b/components/component/src/org/icefaces/mobi/component/timespinner/android/default-time.css
@@ -60,8 +60,8 @@
     color: #000000;
     padding: 0;
     z-index: 1001;
-    position: fixed;
-    top:20px;
+    position: absolute;
+    top:15%;
     left:15%;
 }
 
